package com.sjmyuan.logger

enum LogLevel {
  case INFO
  case WARNING
  case ERROR
}
